--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,9 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
-  skip: true  # [win]
+  skip:
+    - match(python, "<3.11")
+    - true # [win]
 
 requirements:
   build:
