--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,7 @@ source:
 build:
   number: 0
   script: {{ PYTHON }} -m pip install . -vv
-  skip:
-    - match(python, "<3.11")
-    - true # [win]
+  skip: True # [win] or python<3.11
 
 requirements:
   build:
