--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -4,3 +4,13 @@ github:
   tooling_branch_name: main
 conda_build:
   pkg_format: '2'
+
+build_platform:
+  osx_arm64: osx_64
+  linux_aarch64: linux_64
+conda_build:
+  error_overlinking: true
+conda_forge_output_validation: true
+provider:
+  linux_aarch64: default
+test: native_and_emulated
